--- a/code/selldialog.ui
+++ b/code/selldialog.ui
@@ -7,17 +7,17 @@
     <x>0</x>
     <y>0</y>
     <width>339</width>
-    <height>388</height>
+    <height>432</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>售票</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="finishButton">
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>320</y>
+     <y>360</y>
      <width>89</width>
      <height>51</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>320</y>
+     <y>360</y>
      <width>89</width>
      <height>51</height>
     </rect>
@@ -43,17 +43,17 @@
    <property name="geometry">
     <rect>
      <x>42</x>
-     <y>40</y>
+     <y>30</y>
      <width>261</width>
-     <height>251</height>
+     <height>352</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
     <property name="verticalSpacing">
-     <number>24</number>
+     <number>18</number>
     </property>
     <item row="0" column="0">
-     <widget class="QLabel" name="trainIDLabel2">
+     <widget class="QLabel" name="Label24">
       <property name="text">
        <string>         车次:</string>
       </property>
@@ -67,54 +67,54 @@
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QLabel" name="departureTimeLabel2">
+     <widget class="QLabel" name="Label22">
       <property name="text">
        <string>     发车时间:</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
+    <item row="3" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string> 请选择起点站:</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
+    <item row="3" column="1">
      <widget class="QComboBox" name="startingStationBox"/>
     </item>
-    <item row="3" column="0">
+    <item row="4" column="0">
      <widget class="QLabel" name="label_3">
       <property name="text">
        <string> 请选择终点站:</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="4" column="1">
      <widget class="QComboBox" name="terminalStationBox"/>
     </item>
-    <item row="4" column="0">
+    <item row="6" column="0">
      <widget class="QLabel" name="label_6">
       <property name="text">
        <string>   剩余座位数:</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
+    <item row="6" column="1">
      <widget class="QLabel" name="seatsLeftLabel">
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
-    <item row="5" column="0">
+    <item row="7" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>   购买的张数:</string>
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
+    <item row="7" column="1">
      <widget class="QSpinBox" name="spinBox"/>
     </item>
     <item row="1" column="1">
@@ -123,6 +123,44 @@
        <string/>
       </property>
      </widget>
+    </item>
+    <item row="8" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>        总价:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="1">
+     <widget class="QLabel" name="sumLabel">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>        票价:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QLabel" name="priceLabel">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>      购票人:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="nameLine"/>
     </item>
    </layout>
   </widget>
